# hswebapp

./: .gitignore  .gitmodules  BitcoinData.hs  Javascript.hs  Main.hs  README.md  Templates.hs  hswebapp.cabal
static/: base.css  canvas.js  chart.js
